Ok, here's a ton of colorschemes.
Have fun with 'em!

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "aconfmgr"]
 	path = aconfmgr-src
 	url = https://github.com/CyberShadow/aconfmgr
+[submodule "colorschemes/base16"]
+	path = colorschemes/base16
+	url = https://github.com/aarowill/base16-alacritty.git
