--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -38,6 +38,7 @@
     ~/.config/direnv/direnvrc: homies/config/direnv/direnvrc
     ~/.config/direnv/direnv.toml: homies/config/direnv/direnv.toml
     ~/.config/direnv/lib: homies/config/direnv/lib
+    ~/.config/wireplumber: homies/config/wireplumber
     ~/.docker/config.json: homies/docker/config.json
     ~/.gitconfig: homies/gitconfig
     ~/.gitignore_global: homies/gitignore_global
