A new container registry!

--- a/homies/docker/config.json
+++ b/homies/docker/config.json
@@ -1,7 +1,8 @@
 {
 	"auths": {
 		"542313659077.dkr.ecr.us-west-2.amazonaws.com": {},
-		"900965112463.dkr.ecr.us-west-2.amazonaws.com": {}
+		"900965112463.dkr.ecr.us-west-2.amazonaws.com": {},
+		"containers.clark.snowdon.jflei.com": {}
 	},
 	"detachKeys": "ctrl-^,q",
 	"credsStore": "secretservice"
