--- a/homies/ssh/config
+++ b/homies/ssh/config
@@ -64,3 +64,9 @@ User root
 HostName router.sc.jflei.com
 KexAlgorithms diffie-hellman-group14-sha1
 ###
+
+### cottage
+Host cottage-router
+    User root
+    HostName 192.168.1.1
+    StrictHostKeyChecking no
